add_subdirectory(bad-params)
add_subdirectory(eventgeneratorfile)
add_subdirectory(userfile)

execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

simple_testing(bunch-circle                   "--file=circle.gmad"                  "")
simple_testing(bunch-composite                "--file=composite.gmad"               "")
simple_testing(bunch-composite-w-gauss        "--file=composite-w-gauss.gmad"       "")
simple_testing(bunch-different-beam-particle  "--file=different-beam-particle.gmad" "")
simple_testing(bunch-exotic-particle          "--file=exotic-particle.gmad"         "")
simple_testing(bunch-exotic-particle-pdgid    "--file=exotic-particle-pdgid.gmad"   "")
simple_testing(bunch-eshell                   "--file=eshell.gmad"                  "")
simple_testing(bunch-eshell-width             "--file=eshell-width.gmad"            "")
simple_testing(bunch-gauss                    "--file=gauss.gmad"                   "")
simple_testing(bunch-gauss-with-s             "--file=gauss-with-s.gmad"            "")
simple_testing(bunch-gaussmatrix              "--file=gaussmatrix.gmad"             "")
simple_testing(bunch-gaussmatrix-pregenerate  "--file=gaussmatrix-pregenerate.gmad" "")
simple_testing(bunch-gausstwiss               "--file=gausstwiss.gmad"              "")
simple_testing(bunch-gausstwiss-dispersion    "--file=gausstwiss-dispersion.gmad"   "")
simple_testing(bunch-gausstwiss-pregenerate   "--file=gausstwiss-pregenerate.gmad"  "")	
simple_testing(bunch-halo                     "--file=halo.gmad"                    "")
simple_testing(bunch-halo-cut                 "--file=halo-cut.gmad"                "")
simple_testing(bunch-ion                      "--file=ion.gmad"                     "")
simple_testing(bunch-ion-h-minus              "--file=ion-hminus.gmad"              "")
simple_testing(bunch-ion-q                    "--file=ionQ.gmad"                    "")
simple_testing(bunch-ion-qe                   "--file=ionQE.gmad"                   "")
simple_testing(bunch-ptc                      "--file=ptc.gmad"                     "")
simple_testing(bunch-particle-pdgid           "--file=particle-pdgid.gmad"          "")
simple_testing(bunch-reference                "--file=reference.gmad"               "")
simple_testing(bunch-reference-backwards      "--file=reference-backwards.gmad"     "")
simple_testing(bunch-ring                     "--file=ring.gmad"                    "")
simple_testing(bunch-sphere                   "--file=sphere.gmad"                  "")
simple_testing(bunch-sixtrack                 "--file=sixtrack.gmad"                "")
simple_testing(bunch-square                   "--file=square.gmad"                  "")
simple_testing(bunch-tilt                     "--file=tilt.gmad"                    "")

set(TESTING_ARGS --ngenerate=32)
simple_testing(bunch-ptc-loop-file "--file=ptc.gmad" "")
