add_subdirectory(bad-params)
add_subdirectory(bdsimsampler)
add_subdirectory(eventgeneratorfile)
add_subdirectory(ptc)
add_subdirectory(userfile)

execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

simple_testing(bunch-beam-momentum            "--file=beam-by-momentum.gmad"        "")
simple_testing(bunch-beam-kinetic-energy      "--file=beam-by-kinetic-energy.gmad"  "")
simple_testing(bunch-box                      "--file=box.gmad"                     "")
simple_testing(bunch-circle                   "--file=circle.gmad"                  "")
simple_testing(bunch-composite                "--file=composite.gmad"               "")
simple_testing(bunch-composite-w-gauss        "--file=composite-w-gauss.gmad"       "")
simple_testing(bunch-composite-sde            "--file=compositespacedirectionenergy.gmad" "")
simple_testing(bunch-different-beam-particle  "--file=different-beam-particle.gmad" "")
simple_testing(bunch-exotic-particle          "--file=exotic-particle.gmad"         "")
simple_testing(bunch-exotic-particle2         "--file=exotic-particle2.gmad"        "")
simple_testing(bunch-exotic-particle-pdgid    "--file=exotic-particle-pdgid.gmad"   "")
simple_testing(bunch-eshell                   "--file=eshell.gmad"                  "")
simple_testing(bunch-eshell-width             "--file=eshell-width.gmad"            "")
simple_testing(bunch-frequency                "--file=bunch-frequency.gmad"         "")
simple_testing(bunch-gauss                    "--file=gauss.gmad"                   "")
simple_testing(bunch-gauss-sigmaP             "--file=gauss-sigmaP.gmad"            "")
simple_testing(bunch-gauss-sigmaEk            "--file=gauss-sigmaEk.gmad"           "")
simple_testing(bunch-gauss-below-rest-mass    "--file=gauss-below-rest-mass.gmad"   "")
simple_testing(bunch-gauss-with-s             "--file=gauss-with-s.gmad"            "")
simple_testing(bunch-gaussmatrix              "--file=gaussmatrix.gmad"             "")
simple_testing(bunch-gaussmatrix-pregenerate  "--file=gaussmatrix-pregenerate.gmad" "")
simple_testing(bunch-gausstwiss               "--file=gausstwiss.gmad"              "")
simple_testing(bunch-gausstwiss-dispersion    "--file=gausstwiss-dispersion.gmad"   "")
simple_testing(bunch-gausstwiss-emitn         "--file=gausstwiss-en.gmad"           "")	
simple_testing(bunch-gausstwiss-pregenerate   "--file=gausstwiss-pregenerate.gmad"  "")	
simple_testing(bunch-halo                     "--file=halo.gmad"                    "")
simple_testing(bunch-halo-cut                 "--file=halo-cut.gmad"                "")
simple_testing(bunch-halo-momentum-cut        "--file=halo-momentum-cut.gmad"       "")
simple_testing(bunch-halo-sigma               "--file=halo-sigma.gmad"              "")
simple_testing(bunch-ion                      "--file=ion.gmad"                     "")
simple_testing(bunch-ion-plus-sign            "--file=ion-plus-sign.gmad"           "")
simple_testing(bunch-ion-primaries-only       "--file=ion.gmad --generatePrimariesOnly" "")
simple_testing(bunch-ion-h-minus              "--file=ion-hminus.gmad"              "")
simple_testing(bunch-ion-q                    "--file=ionQ.gmad"                    "")
simple_testing(bunch-ion-qe                   "--file=ionQE.gmad"                   "")
simple_testing(bunch-particle-pdgid           "--file=particle-pdgid.gmad"          "")
simple_testing(bunch-particle-anti_proton     "--file=particle-anti_proton.gmad"    "")
simple_testing(bunch-period                   "--file=bunch-period.gmad"            "")
simple_testing(bunch-reference                "--file=reference.gmad"               "")
simple_testing(bunch-reference-backwards      "--file=reference-backwards.gmad"     "")
simple_testing(bunch-reference-p0             "--file=reference-p0.gmad"            "")
simple_testing(bunch-reference-ek0            "--file=reference-ek0.gmad"           "")
simple_testing(bunch-ring                     "--file=ring.gmad"                    "")
simple_testing(bunch-sphere                   "--file=sphere.gmad"                  "")
simple_testing(bunch-sixtrack                 "--file=sixtrack.gmad"                "")
simple_testing(bunch-square                   "--file=square.gmad"                  "")
simple_testing(bunch-square-zFromT            "--file=square-zFromT.gmad"           "")
simple_testing(bunch-square-envelopeZ         "--file=square-envelopeZ.gmad"        "")
simple_testing(bunch-tilt                     "--file=tilt.gmad"                    "")

simple_testing(random-engine-hepjames   "--file=random-engine-hepjames.gmad"  "")
if (CLHEP_HAS_MIXMAX)
  simple_testing(random-engine-mixmax     "--file=random-engine-mixmax.gmad"    "")
else()
  simple_fail(random-engine-mixmax "--file=random-engine-mixmax.gmad")
endif()
