simple_testing(Component-CSampler      "--file=csampler.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Decapole      "--file=deca.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-Degrader      "--file=degrader.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Drift         "--file=drift.gmad"    ${OVERLAP_CHECK})
simple_testing(Component-ECol          "--file=ecol.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-ECol-Tapered  "--file=ecol_tapered.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Gap           "--file=gap.gmad"      ${OVERLAP_CHECK})	
if(USE_GDML)
  simple_testing(Component-GDML        "--file=gdml.gmad"     ${OVERLAP_CHECK})
endif()
simple_testing(Component-HKicker       "--file=hkicker.gmad"  ${OVERLAP_CHECK})
simple_testing(Component-Kicker        "--file=kicker.gmad"   ${OVERLAP_CHECK})
simple_testing(Component-LaserWire     "--file=laser.gmad"    ${OVERLAP_CHECK})
simple_testing(Component-Multipole     "--file=mult.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-MuonSpoiler   "--file=musp.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-Octupole      "--file=oct.gmad"      ${OVERLAP_CHECK})
simple_testing(Component-Quadrupole    "--file=quad.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-QuadrupoleOffset "--file=quadOffset.gmad" ${OVERLAP_CHECK})
simple_testing(Component-RBend         "--file=rben.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-RBendPoleFace "--file=rbenPoleFace.gmad" ${OVERLAP_CHECK})
simple_testing(Component-RCol          "--file=rcol.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-RCol-Tapered  "--file=rcol_tapered.gmad" ${OVERLAP_CHECK})
simple_testing(Component-RF            "--file=rf.gmad"       ${OVERLAP_CHECK})
simple_testing(Component-RFCavity      "--file=rfcavity.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Sampler       "--file=sampler.gmad"  ${OVERLAP_CHECK})
simple_testing(Component-SBend         "--file=sben.gmad"     ${OVERLAP_CHECK})
simple_testing_long(Component-SBendPoleFace     "--file=sbenPoleFace.gmad"     ${OVERLAP_CHECK})
simple_testing_long(Component-SBendFringefields "--file=sbenFringefields.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Screen        "--file=screen.gmad"   ${OVERLAP_CHECK})
simple_testing(Component-Sextupole     "--file=sext.gmad"     ${OVERLAP_CHECK})
simple_testing(Component-Shield        "--file=shield.gmad"   ${OVERLAP_CHECK})
simple_testing(Component-Solenoid      "--file=sole.gmad"     ${OVERLAP_CHECK})

set(TESTING_ARGS --circular)
simple_testing(Component-Teleporter "--file=teleporter.gmad" "")

set(TESTING_ARGS --circular)
simple_fail(Teleport-Protection "--file=teleporter_protection.gmad")

simple_testing(Component-ThinMultipole "--file=thinMult.gmad" ${OVERLAP_CHECK})
simple_testing(Component-Tunnel        "--file=tunnel.gmad" ${OVERLAP_CHECK})
simple_testing(Component-VKicker       "--file=vkicker.gmad" ${OVERLAP_CHECK})

if(USE_AWAKE)
  simple_testing(Component-AwakeSpectrometer "--file=awakespectrometer.gmad" ${OVERLAP_CHECK})
endif()

add_subdirectory(dipoles)
