# all bends / dipoles in here - lots of possiblities
add_subdirectory(dipoles)

# standard components
simple_testing(component-csampler            "--file=csampler.gmad"        ${OVERLAP_CHECK})
simple_testing(component-decapole            "--file=decapole.gmad"        ${OVERLAP_CHECK})
simple_testing(component-degrader            "--file=degrader.gmad"        ${OVERLAP_CHECK})
simple_testing(component-drift               "--file=drift.gmad"           ${OVERLAP_CHECK})
simple_testing(component-ecol                "--file=ecol.gmad"            ${OVERLAP_CHECK})
simple_testing(component-ecol-tapered        "--file=ecol_tapered.gmad"    ${OVERLAP_CHECK})
simple_testing(component-gap                 "--file=gap.gmad"             ${OVERLAP_CHECK})	
simple_testing(component-hkicker             "--file=hkicker.gmad"         ${OVERLAP_CHECK})
simple_testing(component-kicker              "--file=kicker.gmad"          ${OVERLAP_CHECK})
simple_testing(component-laserire            "--file=laser.gmad"           ${OVERLAP_CHECK})
simple_testing(component-multipole-thick     "--file=multipole_thick.gmad" ${OVERLAP_CHECK})
simple_testing(component-multipole-thin      "--file=multipole_thin.gmad"  ${OVERLAP_CHECK})
simple_testing(component-muon-spoiler        "--file=muon_spoiler.gmad"    ${OVERLAP_CHECK})
simple_testing(component-octupole            "--file=octupole.gmad"        ${OVERLAP_CHECK})
simple_testing(component-quadrupole          "--file=quadrupole.gmad"      ${OVERLAP_CHECK})
simple_testing(component-quadrupole-offset   "--file=quadOffset.gmad"      ${OVERLAP_CHECK})
simple_testing(component-rcol                "--file=rcol.gmad"            ${OVERLAP_CHECK})
simple_testing(component-rcol-Tapered        "--file=rcol_tapered.gmad"    ${OVERLAP_CHECK})
simple_testing(component-rf                  "--file=rf.gmad"              ${OVERLAP_CHECK})
simple_testing(component-rf-cavity           "--file=rfcavity.gmad"        ${OVERLAP_CHECK})
simple_testing(component-sampler             "--file=sampler.gmad"         ${OVERLAP_CHECK})
simple_testing(component-screen              "--file=screen.gmad"          ${OVERLAP_CHECK})
simple_testing(component-sextupole           "--file=sextupole.gmad"       ${OVERLAP_CHECK})
simple_testing(component-shield              "--file=shield.gmad"          ${OVERLAP_CHECK})
simple_testing(component-solenoid            "--file=solenoid.gmad"        ${OVERLAP_CHECK})
simple_testing(component-tunnel              "--file=tunnel.gmad"          ${OVERLAP_CHECK})
simple_testing(component-vKicker             "--file=vkicker.gmad"         ${OVERLAP_CHECK})

# ones requiring special options / falgs
if(USE_GDML)
  simple_testing(component-GDML              "--file=gdml.gmad"              ${OVERLAP_CHECK})
  simple_testing(component-GDML-nopreprocess "--file=gdml_nopreprocess.gmad" ${OVERLAP_CHECK})
endif()

set(TESTING_ARGS --circular)
simple_testing(component-teleporter "--file=teleporter.gmad" "")

set(TESTING_ARGS --circular)
simple_fail(component-teleport-protection "--file=teleporter_protection.gmad")

if(USE_AWAKE)
  simple_testing(component-awakespectrometer "--file=awakespectrometer.gmad" ${OVERLAP_CHECK})
endif()
