# all bends / dipoles in here - lots of possiblities
add_subdirectory(dipoles)

# standard components
simple_testing(component-csampler            "--file=csampler.gmad"        ${OVERLAP_CHECK})
simple_testing(component-crystal-no-phys     "--file=crystalcol-no-phys.gmad" ${OVERLAP_CHECK})
simple_testing(component-decapole            "--file=decapole.gmad"        ${OVERLAP_CHECK})
simple_testing(component-degrader            "--file=degrader.gmad"        ${OVERLAP_CHECK})
simple_testing(component-drift               "--file=drift.gmad"           ${OVERLAP_CHECK})
simple_testing(component-dump                "--file=dump.gmad"            ${OVERLAP_CHECK})
simple_testing(component-ecol                "--file=ecol.gmad"            ${OVERLAP_CHECK})
simple_testing(component-ecol-tapered        "--file=ecol_tapered.gmad"    ${OVERLAP_CHECK})
simple_testing(component-gaborlens           "--file=gaborlens.gmad"       ${OVERLAP_CHECK})
simple_testing(component-gap                 "--file=gap.gmad"             ${OVERLAP_CHECK})
simple_testing(component-hkicker             "--file=hkicker.gmad"         ${OVERLAP_CHECK})
simple_testing(component-hkicker-fringe      "--file=hkicker_fringe.gmad"  ${OVERLAP_CHECK})
simple_testing(component-jcol                "--file=jcol.gmad"            ${OVERLAP_CHECK})
simple_testing(component-kicker              "--file=kicker.gmad"          ${OVERLAP_CHECK})
simple_testing(component-kicker-scaling      "--file=kicker_scaling.gmad"  ${OVERLAP_CHECK})
simple_testing(component-kicker-fringe       "--file=kicker_fringe.gmad"   ${OVERLAP_CHECK})
simple_testing(component-kicker-fringe-scaling "--file=kicker_fringe_scaling.gmad" ${OVERLAP_CHECK})
simple_testing(component-kicker-fringe-off   "--file=kicker_fringe_off.gmad" ${OVERLAP_CHECK})
simple_testing(component-laserire            "--file=laser.gmad"           ${OVERLAP_CHECK})
simple_testing(component-multipole-thick     "--file=multipole_thick.gmad" ${OVERLAP_CHECK})
simple_testing(component-multipole-thin      "--file=multipole_thin.gmad"  ${OVERLAP_CHECK})
simple_testing(component-multipole-thick-thin     "--file=multipole_thick_thin.gmad" ${OVERLAP_CHECK})
simple_testing(component-muon-spoiler        "--file=muon_spoiler.gmad"    ${OVERLAP_CHECK})
simple_testing(component-octupole            "--file=octupole.gmad"        ${OVERLAP_CHECK})
simple_testing(component-paralleltransporter "--file=paralleltransporter.gmad" ${OVERLAP_CHECK})
simple_testing(component-quadrupole          "--file=quadrupole.gmad"      ${OVERLAP_CHECK})
simple_testing(component-quadrupole-offset   "--file=quadOffset.gmad"      ${OVERLAP_CHECK})
simple_testing(component-rcol                "--file=rcol.gmad"            ${OVERLAP_CHECK})
simple_testing(component-rcol-tapered        "--file=rcol_tapered.gmad"    ${OVERLAP_CHECK})
simple_testing(component-rcol-circular-outer "--file=rcol_circular_outer.gmad" ${OVERLAP_CHECK})
simple_testing(component-rmatrix             "--file=rmatrix.gmad"         ${OVERLAP_CHECK})
simple_testing(component-rmatrix-thin        "--file=rmatrix_thin.gmad"    ${OVERLAP_CHECK})
simple_testing(component-rf                  "--file=rf.gmad"              ${OVERLAP_CHECK})
simple_testing(component-rfx                 "--file=rfx.gmad"             ${OVERLAP_CHECK})
simple_testing(component-rfy                 "--file=rfy.gmad"             ${OVERLAP_CHECK})
simple_testing(component-rf-cavity           "--file=rfcavity.gmad"        ${OVERLAP_CHECK})
simple_testing(component-rf-fringe-off       "--file=rf_fringe_off.gmad"   ${OVERLAP_CHECK})
simple_testing(component-sampler             "--file=sampler.gmad"         ${OVERLAP_CHECK})
simple_testing(component-scaling             "--file=scaling.gmad"         ${OVERLAP_CHECK})
simple_testing(component-screen              "--file=screen.gmad"          ${OVERLAP_CHECK})
simple_testing(component-sextupole           "--file=sextupole.gmad"       ${OVERLAP_CHECK})
simple_testing(component-shield              "--file=shield.gmad"          ${OVERLAP_CHECK})
simple_testing(component-solenoid            "--file=solenoid.gmad"        ${OVERLAP_CHECK})
simple_testing(component-target              "--file=target.gmad"          ${OVERLAP_CHECK})
simple_testing(component-transform3d         "--file=transform3d.gmad"     ${OVERLAP_CHECK})
simple_testing(component-tunnel              "--file=tunnel.gmad"          ${OVERLAP_CHECK})
simple_testing(component-undulator           "--file=undulator.gmad"       ${OVERLAP_CHECK})
simple_testing(component-vkicker             "--file=vkicker.gmad"         ${OVERLAP_CHECK})
simple_testing(component-vkicker-fringe      "--file=vkicker_fringe.gmad"  ${OVERLAP_CHECK})
simple_testing(component-wirescanner         "--file=wirescanner.gmad"     ${OVERLAP_CHECK})

# crystal tests - geometry works in earlier versions but physics list not present
if (G4_MINOR_VERSION GREATER 3)
  simple_testing(component-crystalcol           "--file=crystalcol.gmad"           ${OVERLAP_CHECK})
  simple_testing(component-crystalcol-2crystals "--file=crystalcol-2crystals.gmad" ${OVERLAP_CHECK})
  simple_testing(component-crystalcol-both      "--file=crystalcol-both.gmad"      ${OVERLAP_CHECK})
endif()

# ones requiring special options / falgs
if(USE_GDML)
# this test should be a fail - but we don't exit as we might inspect angled components wrongly
# it will report overlaps but we won't identify that in the simple_fail
# just now just for coverage
  simple_testing(component-element-too-short "--file=element-too-short.gmad" "")
  
  simple_testing(component-gdml              "--file=gdml.gmad"              ${OVERLAP_CHECK})
  simple_testing(component-gdml-nopreprocess "--file=gdml_nopreprocess.gmad" ${OVERLAP_CHECK})
endif()

set(TESTING_ARGS --circular)
simple_testing(component-teleporter "--file=teleporter.gmad" "")

set(TESTING_ARGS --circular)
simple_fail(component-teleport-protection "--file=teleporter_protection.gmad")

if(USE_AWAKE)
  simple_testing(component-awakespectrometer "--file=awakespectrometer.gmad" ${OVERLAP_CHECK})
endif()
