add_subdirectory(field_transforms)
add_subdirectory(maps_poisson)
add_subdirectory(maps_bdsim)
add_subdirectory(low_energy_high_field)
add_subdirectory(integrators)
add_subdirectory(subfield)

simple_testing(field-lhc-on  "--file=lhc-fields-on.gmad"  "")
simple_testing(field-lhc-off "--file=lhc-fields-off.gmad" "")
