add_subdirectory(ggmad)
add_subdirectory(Mokka)
add_subdirectory(1_layout)
add_subdirectory(2_transform)
add_subdirectory(3_beampipes)
add_subdirectory(4_magnets)
add_subdirectory(5_tunnel)
add_subdirectory(6_curvilinear)
add_subdirectory(7_tilt_offset)
add_subdirectory(8_mokka_sql)
if(USE_GDML)
  add_subdirectory(9_gdml)
endif()
add_subdirectory(10_multiple_beamlines)
if (G4_MINOR_VERSION GREATER 3)
  add_subdirectory(11_crystals)
endif()
