add_subdirectory(macros)
add_subdirectory(physicslists)
add_subdirectory(regions)
add_subdirectory(1_em)
add_subdirectory(2_hadronic)
add_subdirectory(3_sr)
add_subdirectory(4_optical)
add_subdirectory(5_biasing)
add_subdirectory(6_muon)
add_subdirectory(7_beamGas)
#add_subdirectory(8_xSection)
add_subdirectory(9_cherenkov)
add_subdirectory(10_importanceSampling)
add_subdirectory(processes_old)
add_subdirectory(protonDiffraction)

simple_testing(physics-energy-limit-high  "--file=physics_energy_limit_high.gmad" "")
simple_testing(physics-energy-limit-low   "--file=physics_energy_limit_low.gmad"  "")
