add_subdirectory(01_trajectoryStore)
add_subdirectory(02_trajectoryDepth)
add_subdirectory(03_trajectoryParticle)
add_subdirectory(04_trajectoryParticleID)
add_subdirectory(05_trajectoryEnergyThreshold)
add_subdirectory(06_trajectoryConnect)
add_subdirectory(07_trajectoryNoTransportation)
add_subdirectory(08_trajectoryLinks)
add_subdirectory(09_trajectoryMultipleOptions)
add_subdirectory(10_trajectoryDipole)
