simple_testing(trajectory-primary                   "--file=trajectory-base.gmad"                      "")
simple_testing(trajectory-all                       "--file=trajectory-all.gmad"                       "")
simple_testing(trajectory-depth-0                   "--file=trajectory-depth-0.gmad"                   "")
simple_testing(trajectory-depth-1                   "--file=trajectory-depth-1.gmad"                   "")
simple_testing(trajectory-depth-2                   "--file=trajectory-depth-2.gmad"                   "")
simple_testing(trajectory-depth-3                   "--file=trajectory-depth-3.gmad"                   "")
simple_testing(trajectory-depth-4                   "--file=trajectory-depth-4.gmad"                   "")
simple_testing(trajectory-depth-5                   "--file=trajectory-depth-5.gmad"                   "")
simple_testing(trajectory-depth-6                   "--file=trajectory-depth-6.gmad"                   "")
simple_testing(trajectory-depth-7                   "--file=trajectory-depth-7.gmad"                   "")
simple_testing(trajectory-depth-8                   "--file=trajectory-depth-8.gmad"                   "")
simple_testing(trajectory-depth-9                   "--file=trajectory-depth-9.gmad"                   "")
simple_testing(trajectory-depth-10                  "--file=trajectory-depth-10.gmad"                  "")
simple_testing(trajectory-particle-e-               "--file=trajectory-particle-e-.gmad"               "")
simple_testing(trajectory-particle-e+               "--file=trajectory-particle-e+.gmad"               "")
simple_testing(trajectory-particleid-single         "--file=trajectory-particleid-single.gmad"         "")
simple_testing(trajectory-particleid-multiple       "--file=trajectory-particleid-multiple.gmad"       "")
simple_testing(trajectory-secondary                 "--file=trajectory-secondary.gmad"                 "")
simple_testing(trajectory-energy-threshold-25mev    "--file=trajectory-energy-threshold-25mev.gmad"    "")
simple_testing(trajectory-energy-threshold-hadronic "--file=trajectory-energy-threshold-hadronic.gmad" "")	
simple_testing(trajectory-energy-threshold-50mev    "--file=trajectory-energy-threshold-50mev.gmad"    "")
simple_testing(trajectory-energy-threshold-100mev   "--file=trajectory-energy-threshold-100mev.gmad"   "")
simple_testing(trajectory-connect                   "--file=trajectory-connect.gmad"                   "")
simple_testing(trajectory-no-transportation         "--file=trajectory-no-transportation.gmad"         "")
simple_testing(trajectory-eloss-s-range             "--file=trajectory-eloss-s-range.gmad"             "")
simple_testing(trajectory-eloss-s-range-full-hits   "--file=trajectory-eloss-s-range-full-hits.gmad"   "")
simple_testing(trajectory-samplerid                 "--file=trajectory-samplerid.gmad"                 "")
simple_testing(trajectory-step-points               "--file=trajectory-steppoints.gmad"                "")
simple_testing(trajectory-step-point-last           "--file=trajectory-steppoint-last.gmad"            "")
simple_testing(trajectory-multiple-options          "--file=trajectory-multiple-options.gmad"          "")
simple_testing(trajectory-momtimeprocess-options    "--file=trajectory-momtimeprocess.gmad"            "")
simple_testing(trajectory-material-option           "--file=trajectory-material.gmad"                  "")
simple_testing(trajectory-filter                    "--file=trajectoryFilter.gmad"                     "")
simple_testing(trajectory-filter-and                "--file=trajectoryFilterAND.gmad"                  "")

simple_fail(trajectory-eloss-s-range-bad            "--file=trajectory-eloss-s-range-bad.gmad"         "")
simple_fail(trajectory-eloss-s-range-bad2           "--file=trajectory-eloss-s-range-bad2.gmad"        "")
simple_fail(trajectory-eloss-s-range-bad3           "--file=trajectory-eloss-s-range-bad3.gmad"        "")
simple_fail(trajectory-eloss-s-range-bad4           "--file=trajectory-eloss-s-range-ba4.gmad"         "")
simple_fail(trajectory-samplerid-bad                "--file=trajectory-samplerid-bad.gmad"             "")

add_subdirectory(10_trajectoryDipole)
add_subdirectory(11_trajectoryLocalLinksIons)
